--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only --require tsconfig-paths/register src/index.ts",
+    "dev": "ts-node-dev --respawn --transpile-only --poll --require tsconfig-paths/register src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "seed": "ts-node --require tsconfig-paths/register prisma/seed.ts",
