--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,27 @@
 services:
   app:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: teachers-portal-app
     ports:
       - "3000:3000"
-    environment:
-      - DB_HOST=db
-      - DB_USER=root
-      - DB_PASSWORD=root
-      - DB_NAME=app_db
-      - DB_PORT=3306
-      - PORT=3000
+    env_file:
+    - .env.dev
+    # environment:
+    #   - DB_HOST=db
+    #   - DB_USER=root
+    #   - DB_PASSWORD=root
+    #   - DB_NAME=app_db
+    #   - DB_PORT=3306
+    #   - PORT=3000
     volumes:
       - .:/app
       - /app/node_modules
     depends_on:
-      - db
-    command: npm run dev
+      db:
+        condition: service_healthy
+    command: sh -c "npx prisma generate && npx prisma migrate dev && npm run dev"
 
   db:
     image: mysql:8.0
@@ -28,6 +33,11 @@ services:
       - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
 
 volumes:
   db_data:
