--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only --poll --require tsconfig-paths/register src/index.ts",
-    "build": "npm run lint && tsc",
+    "build": "npm run lint && tsc && tsc-alias",
     "start": "node dist/index.js",
     "seed": "ts-node --require tsconfig-paths/register prisma/seed.ts",
     "migrate": "npx prisma migrate deploy",
@@ -42,6 +42,7 @@
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.5",
     "ts-node-dev": "^2.0.0",
+    "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.2"
