--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -16,7 +16,8 @@ services:
     depends_on:
       db:
         condition: service_healthy
-    command: sh -c "npm install && npx prisma generate && npx prisma migrate dev && npm run dev"
+    # command: sh -c "npm install && npx prisma generate && npx prisma migrate dev && npm run dev"
+    command: sh -c "npm install && npx prisma generate && npx prisma db push && npm run seed && npm run dev"
 
   db:
     image: mysql:8.0
