--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "@typescript-eslint/parser": "^8.46.2",
+    "chance": "^1.1.13",
     "eslint": "^9.38.0",
     "globals": "^16.4.0",
     "jest": "^30.2.0",
