--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only --poll --require tsconfig-paths/register src/index.ts",
-    "build": "npm run lint && tsc && tsc-alias",
+    "build": "rm -rf dist/ && npm run lint && tsc && tsc-alias && cp -r src/public dist/src/public",
     "start": "node dist/index.js",
     "seed": "ts-node --require tsconfig-paths/register prisma/seed.ts",
     "migrate": "npx prisma migrate deploy",
