--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -14,7 +14,6 @@ COPY . .
 RUN npx prisma generate
 RUN npm run build
 
-
 # ---------- FINAL IMAGE ----------
 FROM node:18-alpine
 
@@ -35,4 +34,4 @@ ENV PORT=3000
 EXPOSE 3000
 
 # Run migrations and start the app
-# CMD ["sh", "-c", "npx prisma migrate deploy && node dist/index.js"]
+CMD ["sh", "-c", "npx prisma migrate deploy && node dist/index.js"]
