--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,6 +7,7 @@ services:
       dockerfile: Dockerfile.prod
     image: akshayhere/teachers-portal-app:latest
     container_name: teachers-portal-app
+    restart: on-failure:5 # Try to restart 5 times on failure then stops.
     ports:
       - "3000:3000"
     env_file:
